syntax = "proto3";

package book;

option go_package = "./book-service/proto";

service BookService {
  rpc ListBooks (ListBooksRequest) returns (ListBooksResponse);
  rpc AddBook (AddBookRequest) returns (AddBookResponse);
  rpc UpdateBook (UpdateBookRequest) returns (UpdateBookResponse);
  rpc DeleteBook (DeleteBookRequest) returns (DeleteBookResponse);
}

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  string category = 4;
  bool available = 5;
}

message ListBooksRequest {}

message ListBooksResponse {
  repeated Book books = 1;
}

message AddBookRequest {
  string title = 1;
  string author = 2;
  string category = 3;
}

message AddBookResponse {
  Book book = 1;
}

message UpdateBookRequest {
  string id = 1;
  string title = 2;
  string author = 3;
  string category = 4;
  bool available = 5;
}

message UpdateBookResponse {
  Book book = 1;
}

message DeleteBookRequest {
  string id = 1;
}

message DeleteBookResponse {
  string message = 1;
}